# signal-intelligence-backbone

./: .env.example  .gitignore  API_REFERENCE.md  DEVELOPMENT.md  FILE_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  dashboard.py  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/models/: signal.py
app/routes/: signals.py
app/services/: drift_detection.py  kafka_service.py  signal_service.py
scripts/: generate_synthetic_data.py  kafka_stream_simulator.py
tests/: test_api.py  test_drift_detection.py
ui/: .env.example  README_UI.md  index.html  tailwind.config.cjs
ui/src/: App.jsx  api.js  styles.css
ui/src/components/: AgentStatusRow.jsx  AnomalyTimeline.jsx  Banner.jsx  DetailsDrawer.jsx  DriftTrendChart.jsx
